--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: "Priyanka's Portfolio"
 description: "AI & ML | Data Analyst | Trainer"
-theme: jekyll-theme-cayman
+theme: jekyll-theme-Time Machine
 
 # Optional settings
 show_downloads: false
 google_analytics: UA-XXXXXXXXX-X
+
